--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
             <style>
 body{
     text-align: center;
-    background-image: url(download.jpg);
-    background-repeat: no-repeat;
-}
+                }
 .qwerty{
     background-color: red;
     color: white;
@@ -24,7 +22,11 @@ body{
     color: black;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 300; 
-}
+                }
+                .somiiko{
+                    margin-left: 10px;
+                    margin-top: 370px;
+                }
             </style>
             <h1 class="qwerty"> 
                 THIS SITE IS PHISHING. DONT LOGIN TO DISCORD WITH IT. YOU WONT BE ABLE TO GET THE NITRO.
@@ -37,5 +39,6 @@ body{
                 DONT LOGIN WITH THIS SITE!!!!!<BR>
                     This site offers a free nitro which is a fake scam...<br>
             </p>
+                <img class="somiiko" src="download.jpg">
         </body>
     </html>
